prevent unwrapped lines from breaking UI

--- a/docs/_SOURCE/assets/styles/_small.scss
+++ b/docs/_SOURCE/assets/styles/_small.scss
@@ -38,6 +38,7 @@ code
     margin-left: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
